<resources>
    <string name="app_name">MyVehicle</string>
    <string name="t5truck">5T TRUCK</string>
    <string name="t10truck">10T TRUCK</string>
    <string name="articulated">ARTICULATED</string>
    <string name="tipper">TIPPER</string>
    <string name="car">CAR</string>
    <string name="setting_name">Send</string>
    <string name="help_name">Save</string>
    <string name="profile_name">Profile</string>
    <string name="admin_karam">admin@Karam</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_truck">Hello blank fragment</string>
    <string name="hello_this">Car</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="start_time">START TIME</string>
    <string name="start">Start</string>
    <string name="driver">Driver:</string>
    <string name="rego">Rego #:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    >
</resources>
