<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:id="@+id/truck_frag"
    android:background="#fff"
    tools:context=".RootFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="30dp"
        android:text="@string/car" />

    <Button
        android:id="@+id/t5truck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/car"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/t5truck" />

    <Button
        android:id="@+id/t10truck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t5truck"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/t10truck" />

    <Button
        android:id="@+id/tipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t10truck"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/tipper" />

    <Button
        android:id="@+id/articulated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tipper"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/articulated" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo"
        android:contentDescription="appLogo" />

</RelativeLayout>